--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
             </div>
         </div> 
     </section>
-    <img src="D:\Image\my pic.jpg" style="height:200px; margin-left:50px; margin-top:20px;width:200px" alt="">
+    <img src="./my pic.jpg" style="height:200px; margin-left:50px; margin-top:20px;width:200px" alt="">
 
 </body>
 </html>
