--- a/about.html
+++ b/about.html
@@ -51,10 +51,10 @@
 <body>
     <div class="logo"><a href="#">-Portfo<span>lio.</span></a></div>
     <ul>
-        <li style="float:right"><a href="file:///D:/HTML/p5.html">contacts</a></li>
-        <li style="float:right"><a href="file:///D:/HTML/p6.html">skills</a></li>
+        <li style="float:right"><a href="./contact.html">contacts</a></li>
+        <li style="float:right"><a href="./skills.html">skills</a></li>
         <li style="float:right"><a href="about">about</a></li>
-        <li style="float:right"><a class="active" href="file:///D:/HTML/p3.html#home">Home</a></li>
+        <li style="float:right"><a class="active" href="./portfolio.html">Home</a></li>
     </ul>
     <section class="about" id="about">
         <div class="avtive"> 
