--- a/skills.html
+++ b/skills.html
@@ -48,10 +48,10 @@
 <body>
     <div class="logo"><a href="#">-Portfo<span>lio.</span></a></div>
     <ul>
-        <li style="float:right"><a href="file:///D:/HTML/p5.html">contact</a></li> 
+        <li style="float:right"><a href="./contact.html">contact</a></li> 
         <li style="float:right"><a href="skills">skills</a></li>
-        <li style="float:right"><a href="file:///D:/HTML/p4.html">about</a></li>
-        <li style="float:right"><a class="active" href="file:///D:/HTML/p3.html#home">Home</a></li>
+        <li style="float:right"><a href="./about.html">about</a></li>
+        <li style="float:right"><a class="active" href="./portfolio.html">Home</a></li>
     </ul>
     <section class="skills" id="skills">
         <div class="max-width">
