--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <h1>👇</h1>
     <button> <a href="./portfolio.html"> Portfolio </a> </button>
     <button> <a href="./helloworld.html"> helloworld </a> </button>
+    <button> <a href="./javascript.html"> javascript </a> </button>
+    <button> <a href="./js2.html"> js2 </a> </button>
+    <button> <a href="./js3.html"> js3 </a> </button>
 </body>
 </html>
