--- a/js2.html
+++ b/js2.html
@@ -4,7 +4,7 @@
 
 <h2>Hello....</h2>
 
-<p id="demo">my name is janvi.</p>
+<p id="demo">my name is janvi....</p>
 
 <button id="div" onclick="myFunction()">Hide Me!</button>
 
