--- a/javascript.html
+++ b/javascript.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <body>
 
 <h2>Hello....</h2>
 
-<p id="demo">my name is janvi.</p>
+<p id="demo">my name is janvi....</p>
 
 <button type="button" onclick="document.getElementById('demo').style.fontSize='40px'">Click Me!</button>
 
