--- a/js3.html
+++ b/js3.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Record List</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        input {
-            padding: 8px;
-            margin-right: 10px;
-        }
-
-        button {
-            background-color: green;
-            color: white;
-            padding: 8px;
-            cursor: pointer;
-        }
-
-        #recordList {
-            margin-top: 20px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>student lists</title>
 </head>
 <body>
 
-    <h2>Student Recorde:<h2>
+  <h2>Enter Names</h2>
+  <input type="text" id="nameInput" placeholder="Enter a name">
+  <button onclick="addName()">student Name</button>
 
-    <form id="recordForm">
-        <label for="recordInput">Student Information:</label>
-        <input type="text" id="recordInput">
-        <button type="button" onclick="addRecord()">Submit</button>
-    </form>
+  <h2>student Names List</h2>
+  <ul id="nameList"></ul>
 
-    <div id="recordList"></div>
+  <script>
+    function addName() {
+      var nameInput = document.getElementById('nameInput');
+      var name = nameInput.value;
+      if (name.trim() !== '') {
+        var nameList = document.getElementById('nameList');
+        var listItem = document.createElement('li');
+        var nameText = document.createElement('span');
+        nameText.textContent = name;
+        
+        var editButton = document.createElement('button');
+        editButton.textContent = 'Edit';
+        editButton.onclick = function() {
+          var editInput = document.createElement('input');
+          editInput.type = 'text';
+          editInput.value = nameText.textContent;
 
-    <script>
-        function addRecord() {
-            var recordInput = document.getElementById("recordInput");
-            var recordValue = recordInput.value;
+          editInput.onblur = function() {
+            nameText.textContent = editInput.value;
+            listItem.removeChild(editInput);
+          };
 
-            var newRecord = document.createElement("p");
-            newRecord.textContent = recordValue;
+          listItem.appendChild(editInput);
+          editInput.focus();
+        };
 
-            var recordList = document.getElementById("recordList");
-            recordList.appendChild(newRecord);
+        var deleteButton = document.createElement('button');
+        deleteButton.textContent = 'Delete';
+        deleteButton.onclick = function() {
+          nameList.removeChild(listItem);
+        };
 
-            recordInput.value = '';
-        }
-    </script>
+        listItem.appendChild(nameText);
+        listItem.appendChild(editButton);
+        listItem.appendChild(deleteButton);
+        nameList.appendChild(listItem);
+        nameInput.value = '';
+      } else {
+        alert('Please enter a name.');
+      }
+    }
+  </script>
 
 </body>
 </html>
